5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1723_2497.log
== TEST (2019-05-09 11:02:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo + t

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo + t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
2876.25
14381.25
71906.25
359531.25
1797656.25
8988281.25
44941406.25
224707031.25
1123535156.25
5617675781.25
28088378906.25
140441894531.25
702209472656.25
3511047363281.25
17555236816406.25
87776184082031.25
438880920410156.25
2194404602050781.2
1.0972023010253906e+16
5.486011505126953e+16
2.7430057525634765e+17
1.3715028762817382e+18
6.857514381408691e+18
3.4287571907043455e+19
1.7143785953521726e+20
8.571892976760863e+20
4.2859464883804313e+21
2.1429732441902155e+22
1.0714866220951077e+23
5.3574331104755387e+23
2.6787165552377693e+24
1.3393582776188846e+25
6.696791388094423e+25
3.3483956940472114e+26
1.6741978470236056e+27
8.370989235118029e+27
4.185494617559014e+28
2.092747308779507e+29
1.0463736543897535e+30
5.231868271948767e+30
2.6159341359743834e+31
1.3079670679871918e+32
6.539835339935959e+32
3.2699176699679793e+33
1.6349588349839897e+34
8.174794174919949e+34
4.087397087459974e+35
2.043698543729987e+36
1.0218492718649934e+37
5.109246359324967e+37
2.5546231796624837e+38
1.277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:05:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = qi * juros
	saldo = saldo + rend
	t = saldo + t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
621.27
644.28
667.29
690.3
713.31
736.32
759.33
782.34
805.35
828.36
851.37
874.38
897.39
920.4
943.41
966.42
989.43
1012.44
1035.45
1058.46
1081.47
1104.48
1127.49
1150.5
1173.51
1196.52
1219.53
1242.54
1265.55
1288.56
1311.57
1334.58
1357.59
1380.6
1403.61
1426.62
1449.63
1472.64
1495.65
1518.66
1541.67
1564.68
1587.69
1610.7
1633.71
1656.72
1679.73
1702.74
1725.75
1748.76
1771.77
1794.78
1817.79
1840.8
1863.81
1886.82
1909.83
1932.84
1955.85
1978.86
2001.87
2024.88
2047.89
2070.9
2093.91
2116.92
2139.93
2162.94
2185.95
2208.96
2231.97
2254.98
2277.99
2301.0
2324.01
2347.02
2370.03
2393.04
2416.05
2439.06
2462.07
2485.08
2508.09
2531.1
2554.11
2577.12
2600.13
2623.14
2646.15
2669.16
2692.17
2715.18
2738.19
2761.2
2784.21
2807.22
2830.23
2853.24
2876.25
2899.26
2922.27
2945.28
2968.29
2991.3
3014.31
3037.32
3060.33
3083.34
3106.35
3129.36
3152.37
3175.38
3198.39
3221.4
3244.41
3267.42
3290.43
3313.44
3336.45
3359.46
3382.47
3405.48
3428.49
3451.5
3474.51
3497.52
3520.53
3543.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:13:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 16
    saldo = saldo + rend
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:14:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:14:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:15:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:16:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:17:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:18:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:19:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:19:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:20:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1) and (t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.138912
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
